# intelosint

./: README.md
backend/: README.md  app.py  pyproject.toml
backend/src/: routes.py
backend/src/api/agents/: README.md  classifier.py
backend/src/api/models/: README.md  communication_models.py  data_models.py  models.py
backend/src/api/modules/handle_image/: README.md
backend/src/globals/: environment.py
frontend/: README.md
frontend/src/app/: layout.tsx
