[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Owen McAllister <owencmcallister@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.10.6"
fastapi = "^0.115.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
